@@ -9,22 +9,48 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Test cases for the PyFloatNode class.
  */
-class PyFloatNodeTest {
+class PyFloatNodeTest extends APyNodeTest {
 
     /**
-     * A sample PyFloatNode.
+     * A PyFloatNode whose domains include a single positive floating-point value (using
+     * different integers for the exhaustive and random domains).
      */
-    private static PyFloatNode node;
+    static PyFloatNode singlePos;
+
+    /**
+     * A PyFloatNode whose domains include a single positive floating-point value (using
+     * different integers for the exhaustive and random domains).
+     */
+    static PyFloatNode singleNeg;
+
+    /**
+     * A PyFloatNode whose domains include multiple integer values (using different
+     * integers for the exhaustive and random domains).
+     */
+    static PyFloatNode multipleVals;
 
     /**
      * Sets up all static fields for use in the test cases.
      */
     @BeforeAll
     static void setUp() {
-        node = new PyFloatNode();
-        List<Double> exDomain = List.of(1.0, 2.0);
-        node.setExDomain(exDomain);
-        node.setRanDomain(exDomain);
+        singlePos = new PyFloatNode();
+        List<Double> exDomain = Collections.singletonList(17.654321);
+        List<Double> ranDomain = Collections.singletonList(203.123456);
+        singlePos.setExDomain(exDomain);
+        singlePos.setRanDomain(ranDomain);
+
+        singleNeg = new PyFloatNode();
+        exDomain = Collections.singletonList(-3.3);
+        ranDomain = Collections.singletonList(-18.18);
+        singleNeg.setExDomain(exDomain);
+        singleNeg.setRanDomain(ranDomain);
+
+        multipleVals = new PyFloatNode();
+        exDomain = List.of(-2.0, -1.0, 0.0, 1.0, 2.0);
+        ranDomain = List.of(-5.0, -4.0, -3.0, 3.0, 4.0, 5.0);
+        multipleVals.setExDomain(exDomain);
+        multipleVals.setRanDomain(ranDomain);
     }
 
     /**
@@ -32,7 +58,8 @@ class PyFloatNodeTest {
      */
     @Test
     void testGetExDomain() {
-        assertEquals(List.of(1.0, 2.0), node.getExDomain());
+        List<? extends Number> exDomain = singlePos.getExDomain();
+        assert (exDomain.size() == 1 && exDomain.get(0).equals(17.654321));
     }
 
     /**
@@ -40,7 +67,8 @@ class PyFloatNodeTest {
      */
     @Test
     void testGetRanDomain() {
-        assertEquals(List.of(1.0, 2.0), node.getRanDomain());
+        List<? extends Number> ranDomain = singlePos.getRanDomain();
+        assert (ranDomain.size() == 1 && ranDomain.get(0).equals(203.123456));
     }
 
     /**
@@ -48,7 +76,7 @@ class PyFloatNodeTest {
      */
     @Test
     void testGetLeftChild() {
-        assertNull(node.getLeftChild());
+        assertNull(singlePos.getLeftChild());
     }
 
     /**
@@ -56,17 +84,77 @@ class PyFloatNodeTest {
      */
     @Test
     void testGetRightChild() {
-        assertNull(node.getRightChild());
+        assertNull(singlePos.getRightChild());
     }
 
     /**
-     * Tests genExVals().
+     * Tests genExVals() in the case that the domain consists of a single positive float.
      */
     @Test
-    void testGenExVals() {
-        Set<PyFloatObj> actual = node.genExVals();
-        Set<PyFloatObj> expected = Set.of(new PyFloatObj(1.0),
-                new PyFloatObj(2.0));
+    void testGenExValsPos() {
+        Set<PyFloatObj> actual = singlePos.genExVals();
+        Set<PyFloatObj> expected = Set.of(new PyFloatObj(17.654321));
         assertEquals(expected, actual);
+    }
+
+    /**
+     * Tests genExVals() in the case that the domain consists of a single negative float.
+     */
+    @Test
+    void testGenExValsNeg() {
+        Set<PyFloatObj> actual = singleNeg.genExVals();
+        Set<PyFloatObj> expected = Set.of(new PyFloatObj(-3.3));
+        assertEquals(expected, actual);
+    }
+
+    /**
+     * Tests genExVals() in the case that the domain consists of multiple floats.
+     */
+    @Test
+    void testGenExValsMultiple() {
+        Set<PyFloatObj> actual = multipleVals.genExVals();
+        Set<PyFloatObj> expected = new HashSet<>();
+        for (double i = -2; i < 3; i++) {
+            expected.add(new PyFloatObj(i));
+        }
+        assertEquals(expected, actual);
+    }
+
+    /**
+     * Tests genRandVal() in the case that the domain consists of a single positive
+     * float.
+     */
+    @Test
+    void testGenRandValPos() {
+        Map<PyFloatObj, Double> actual =
+                buildDistribution(singlePos, 100);
+        Map<PyFloatObj, Double> expected = Map.of(new PyFloatObj(203.123456), 1.0);
+        assertTrue(compareDistribution(expected, actual, 0.0));
+    }
+
+    /**
+     * Tests genRandVal() in the case that the domain consists of a single negative
+     * float.
+     */
+    @Test
+    void testGenRandValNeg() {
+        Map<PyFloatObj, Double> actual =
+                buildDistribution(singleNeg, 100);
+        Map<PyFloatObj, Double> expected = Map.of(new PyFloatObj(-18.18), 1.0);
+        assertTrue(compareDistribution(expected, actual, 0.0));
+    }
+
+    /**
+     * Tests genRandVal() in the case that the domain consists of multiple floats.
+     */
+    @Test
+    void testGenRandValMultiple() {
+        Map<PyFloatObj, Double> actual =
+                buildDistribution(multipleVals, 100000);
+        Map<PyFloatObj, Double> expected = new HashMap<>();
+        for (double i : new double[]{-5.0, -4.0, -3.0, 3.0, 4.0, 5.0}) {
+            expected.put(new PyFloatObj(i), (1.0 / 6.0));
+        }
+        assertTrue(compareDistribution(expected, actual, 0.01));
     }
 }
